Don't double escape "&".

BUG: 211128

svn path=/branches/KDE/4.4/kdepimlibs/; revision=1085498